src/objects/Quote_Team_c_x__x.object
<CustomObject>
    <externalDataSource>ALU_Data_Source_New</externalDataSource>
    <externalName>Quote_Team_c__x</externalName>
    <fields>
        <fullName>Contact_Name_c_c__c</fullName>
        <externalDeveloperName>Contact_Name_c__c</externalDeveloperName>
        <label>Contact Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_c_c__c</fullName>
        <externalDeveloperName>Contact_c__c</externalDeveloperName>
        <label>Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Quote_Name_c_c__c</fullName>
        <externalDeveloperName>Contracted_Quote_Name_c__c</externalDeveloperName>
        <label>Contracted Quote Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracted_Quote_c_c__c</fullName>
        <externalDeveloperName>Contracted_Quote_c__c</externalDeveloperName>
        <label>Contracted Quote</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_c__c</fullName>
        <externalDeveloperName>CreatedById__c</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By_Name_c_c__c</fullName>
        <externalDeveloperName>Created_By_Name_c__c</externalDeveloperName>
        <label>Created By Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Team_Member_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Default_Team_Member_c__c</externalDeveloperName>
        <label>Default Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisabledForClone_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>DisabledForClone_c__c</externalDeveloperName>
        <label>DisabledForClone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Permission_c_c__c</fullName>
        <externalDeveloperName>Document_Permission_c__c</externalDeveloperName>
        <label>Document Permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
                <value>
                    <fullName>Read Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted__c</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate_c__c</fullName>
        <externalDeveloperName>LastActivityDate__c</externalDeveloperName>
        <label>Last Activity Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_c__c</fullName>
        <externalDeveloperName>LastModifiedById__c</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate_c__c</fullName>
        <externalDeveloperName>LastModifiedDate__c</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate_c__c</fullName>
        <externalDeveloperName>LastReferencedDate__c</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate_c__c</fullName>
        <externalDeveloperName>LastViewedDate__c</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Name_c_c__c</fullName>
        <externalDeveloperName>Last_Modified_By_Name_c__c</externalDeveloperName>
        <label>Last Modified By Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_c__c</fullName>
        <externalDeveloperName>Name__c</externalDeveloperName>
        <label>Quote Team Number</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Addition_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>New_Addition_c__c</externalDeveloperName>
        <label>New Addition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Team_Member_Name_c_c__c</fullName>
        <externalDeveloperName>Quote_Team_Member_Name_c__c</externalDeveloperName>
        <label>Team Member Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Receive_CQ_Notifications_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Receive_CQ_Notifications_c__c</externalDeveloperName>
        <label>Receive CQ Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_c__c</fullName>
        <externalDeveloperName>Role__c</externalDeveloperName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tendering Support</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Lead</fullName>
                </value>
                <value>
                    <fullName>CQ Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp_c__c</fullName>
        <externalDeveloperName>SystemModstamp__c</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name_c_c__c</fullName>
        <externalDeveloperName>Team_Member_Name_c__c</externalDeveloperName>
        <label>Team Member Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tendering_Mailbox_Name_c_c__c</fullName>
        <externalDeveloperName>Tendering_Mailbox_Name_c__c</externalDeveloperName>
        <label>Tendering Mailbox Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tendering_Mailbox_c_c__c</fullName>
        <externalDeveloperName>Tendering_Mailbox_c__c</externalDeveloperName>
        <label>Tendering Mailbox</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tendering_Support_Rule_Number_c_c__c</fullName>
        <externalDeveloperName>Tendering_Support_Rule_Number_c__c</externalDeveloperName>
        <label>Tendering Support Rule Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tendering_Support_Rule_c_c__c</fullName>
        <externalDeveloperName>Tendering_Support_Rule_c__c</externalDeveloperName>
        <label>Tendering Support Rule</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name_c_c__c</fullName>
        <externalDeveloperName>User_Name_c__c</externalDeveloperName>
        <label>User Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_c_c__c</fullName>
        <externalDeveloperName>User_c__c</externalDeveloperName>
        <label>User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Surround CQ Team</label>
    <pluralLabel>Surround CQ Team</pluralLabel>
</CustomObject>